@@ -4,6 +4,7 @@
 
 import generic
 import string
+import tempfile
 
 class reader(generic.reader):
 	indexed = True
@@ -64,6 +65,54 @@ class reader(generic.reader):
 			self.counterElements += 1
 			yield generic.indexedElement("Tri3", nodeList, label=str(self.counterElements))
 
-def writer(file, reader):
-	raise ValueError, "Module "+`__name__`+" does not define a writer method"
+def writer(file, reader, string=False):
+	"Reads mesh from a reader and write it into a PLY file"
+	if not reader.indexed:
+		raise RuntimeError, "Cannot convert from non-indexed format to indexed format"
+	if string:
+		out = file
+		file = ""
+	else:
+		out = open(file, "w")
+
+	tempFiles = [tempfile.TemporaryFile(mode='w+') for i in range(2)]
+	tempFiles[0].write("ply\nformat ascii 1.0\ncomment generated by meshconvert\n")
+
+	nodeIndices = {}
+	nodes = reader.readNode()
+	nodeCounter = 0
+	try:
+		while True:
+			n = nodes.next()
+			nodeIndices[n.label] = str(nodeCounter)
+			tempFiles[1].write(n.x+" "+n.y+" "+n.z+"\n")
+			nodeCounter += 1
+	except StopIteration:
+		pass
+
+	tempFiles[0].write("element vertex "+str(nodeCounter)+"\nproperty float x\nproperty float y\nproperty float z\n")
+
+	elements = reader.readElementIndexed()
+	elementCounter = 0
+	try:
+		while True:
+			e = elements.next()
+			tempFiles[1].write(str(len(e.list))+" "+" ".join([nodeIndices[i] for i in e.list])+"\n")
+			elementCounter += 1
+	except StopIteration:
+		pass
+
+	tempFiles[0].write("element face "+str(elementCounter)+"\nproperty list uchar int vertex_indices\nend_header\n")
+
+	for f in tempFiles:
+		f.seek(0)
+		while True:
+			line = f.readline()
+			if line == "":
+				break
+			out.write(line)
+		f.close
+
+	if not string:
+		out.close()
 
